# CamPorter

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: app.css
src-tauri/: Cargo.toml  install-ffmpeg.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LogViewer.svelte  MediaPreview.svelte
src/routes/: +layout.ts  +page.svelte
src/routes/preview/: +page.svelte
src/types/: svelte-plyr.d.ts
src/utils/: logger.ts
