[package]
name = "camporter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "camporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
openssl = { version = "0.10.73", features = ["vendored"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
sysinfo = "0.30"  # Cross-platform system information
walkdir = "2.5.0"  # For recursive directory traversal
serde_json = "1"
base64 = "0.21"  # For encoding file data
mime = "0.3.17"
image = "0.25.6"
tempfile = "3.8.1"  # For creating temporary files
which = "5.0.0"  # For checking if FFmpeg is installed

# Use thumbnails crate with feature flags for cross-compilation
[target.'cfg(not(target_os = "windows"))'.dependencies]
thumbnails = "0.2.1"

# For Windows builds, we'll implement a simpler thumbnail generator using just the image crate
